@@ -6,9 +6,15 @@
 
 ---
 
-## 0. 使用方式
+## 0. 使用方式（强制 · 执行约定）
 
-开发任一接口前，对照本清单逐条自检；提交前确认"规约 → 对应场景用例"已写。Review/测试 Agent 以本清单为验收基线。规约编号 G-x 与缺陷 D-xx、场景 Sx 对应。
+本规约对所有开发 Agent **强制生效**，执行约定如下：
+1. **派发即引用**：Team Lead 派发任何后端/前端实现切片时，prompt 必须写「先读并遵守 `shared/architecture/05-secure-coding-guardrails.md`，按 §10 并发模式实现，提交前过 §12 自检卡」。
+2. **开发自检**：开发任一接口前对照逐条自检；状态变更/资源扣减/限额/唯一 必须套用 §10 标准模式（红线：禁止先查后写控并发）。
+3. **测试绑定**：每条规约绑定 S1–S9 场景用例（见 `../test-plan/02-scenario-test-plan.md`），缺测视为不达标。
+4. **审查为闸**：Review/测试 Agent 以本清单 + §12 自检卡为验收基线，不达标项**阻塞合并**。
+
+规约编号 G-x 与缺陷 D-xx、场景 Sx 对应。
 
 ---
 
@@ -64,15 +70,71 @@
 
 ---
 
-## 10. 接口提交前自检卡（贴进 PR 模板）
+## 10. 并发与一致性 · 标准实现模式（强制，按场景照抄）
+
+> 任何"读-改-写"或"状态流转/限额/唯一"操作，必须套用下表对应模式。**红线：禁止用「先 SELECT 判断、再 INSERT/UPDATE」来保证 唯一性/限额/状态唯一流转**——这是 TOCTOU 竞态，并发必穿。
+
+| 场景 | 标准手段 | 本仓范例 |
+|---|---|---|
+| 共享数值资源扣减（库存/额度），需读-改-写 | Redisson 分布式锁（**先锁后事务 + self 代理**） | `InventoryServiceImpl.deductStock` |
+| 单据/记录状态流转（防重复提交/双击） | **条件 UPDATE CAS**：`SET status=新 WHERE id=? AND status=旧`，校验 affected==1 | `confirmByWa` 应改造为此式 |
+| 计数/配额（失败次数/日限/注册码用量） | Redisson 原子计数+TTL 或 DB 条件自增 CAS | 登录锁定 / 短信防刷 / `consumeInviteForRegister` |
+| 全局序列号（单据号） | Redis INCR + DB 唯一索引兜底 | `DocumentNumberService` |
+| 唯一约束（手机号/名称） | DB 唯一索引 + 捕获 `DuplicateKeyException`→语义码 | wholesalers `uk_tenant_id_name` |
+
+**P1 资源扣减（库存型）** — 先获锁、再开事务、self 代理（`this` 自调用会使 `@Transactional` 失效）：
+```java
+RLock lock = redisson.getLock("lock:inv:"+wid+":"+skuId);
+if (!lock.tryLock(WAIT, LEASE, SECONDS)) throw biz(SYSTEM_BUSY);
+try { self.doDeductInTx(ctx); }          // self = @Lazy 自注入代理
+finally { if (lock.isHeldByCurrentThread()) lock.unlock(); }  // 事务提交后才释放
+```
+
+**P2 状态流转防重复提交** — 条件 UPDATE CAS（`confirmByWa`/审核/任何"只能成功一次"的流转都按此）：
+```java
+int n = mapper.update(null, Wrappers.<Inquiry>lambdaUpdate()
+    .set(Inquiry::getStatus, CONFIRMED)
+    .eq(Inquiry::getId, id)
+    .eq(Inquiry::getStatus, PENDING));   // 旧态作为 CAS 条件
+if (n != 1) throw biz(STATE_CONFLICT);   // 并发只有一个赢, 其余拒绝
+// n==1 后再做后续(建出库单/扣库存), 全在同一事务, 失败整体回滚
+```
+
+**P3 配额/计数 CAS** — 条件自增、用尽即拒：
+```java
+int n = mapper.update(null, lambdaUpdate()
+    .setSql("used_count = used_count + 1")
+    .eq(InviteCode::getId, id)
+    .lt(InviteCode::getUsedCount, maxUses));
+if (n != 1) throw biz(EXHAUSTED);
+```
+
+**P4 单据号**：`redisson.getAtomicLong("docno:"+type+":"+code+":"+yyyymmdd).incrementAndGet()` + 表 `doc_no` 唯一索引；冲突转 `DOC_NO_GENERATE_FAILED`。
+
+**P5 唯一性**：建表唯一索引 + insert 捕获 `DuplicateKeyException` → 语义错误码（**不靠**应用层先查）。
+
+**事务边界**：跨多写的业务（确认→建单→扣库存）必须**单事务**，任一步失败整体回滚；分布式锁要包住整个提交窗口（先锁后事务，提交后释放）。
+
+---
+
+## 11. 迁移与环境 · 红线
+- **MySQL 迁移**：禁用 `CREATE INDEX IF NOT EXISTS`（MySQL 不支持，H2 能过→部署才炸，V7 踩坑）；索引**内联进 CREATE TABLE 的 `KEY` 子句**，确保 H2(测试)+MySQL(运行) 双兼容。新表索引名加表前缀（H2 约束名全局唯一）。
+- **测试(JDK21)**：surefire `argLine` 需含 `-XX:+EnableDynamicAgentLoading -Djdk.attach.allowAttachSelf=true`（已在 pom，勿删）。
+- mock 验证码/密钥/日志 见 §7。
+
+---
+
+## 12. 接口提交前自检卡（贴进 PR 模板）
 
 ```
 [ ] 鉴权：接口已纳入拦截器或注解；越权(S4)用例已写
 [ ] 租户：tenantId 来自登录态；跨租户(S4)用例已写
 [ ] 校验：枚举/范围/必填已校验；非法输入(S2)用例已写
 [ ] 状态机：非法转移已拒绝；S5 用例已写
-[ ] 唯一/幂等：DB 唯一索引 + 应用校验；S6 用例已写
-[ ] 限流：敏感接口 Redisson 计数+TTL；S3/S7 用例已写
+[ ] 并发：读-改-写资源加锁(先锁后事务+self代理)；状态流转用条件CAS(校验affected==1)；不用先查后写控并发；S7 用例已写
+[ ] 唯一/幂等：DB 唯一索引 + 捕获DuplicateKey；重复提交不产生重复数据；S6 用例已写
+[ ] 限流：敏感接口 Redisson 计数+TTL；S3 用例已写
+[ ] 迁移：无 CREATE INDEX IF NOT EXISTS；索引内联 KEY；H2+MySQL 双兼容
 [ ] 配置：无 mock 泄漏到 prod；密钥外置
 [ ] 错误：防枚举 + 不泄露堆栈
 [ ] 契约：文档 + 前后端类型已同步
@@ -80,7 +142,8 @@
 
 ---
 
-## 11. 变更记录
+## 13. 变更记录
 | 版本 | 日期 | 变更 |
 |---|---|---|
 | v1 | 2026-06-28 | 首版：由 15 缺陷逆向提炼 9 类编码规约 + 提交自检卡 |
+| v2 | 2026-06-30 | 补 §10 并发与一致性标准实现模式(P1-P5 可照抄)、§11 迁移/环境红线；自检卡加 并发/迁移 项 |
